style: Fixes on mobile

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   background-color: #fafafa;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
   line-height: 18px;
 }
 .container {
@@ -51,9 +52,10 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: none;
   padding: 2rem;
   background-color: #fff;
+  border: 1px solid #eee;
+  max-width: 320px;
 }
 .container-logo-insta {
   display: flex;
@@ -125,6 +127,7 @@ body {
   background-color: #fff;
   padding: 2.1rem;
   font-size: 0.875rem;
+  border: 1px solid #eee;
 }
 
 .claim-app {
@@ -153,15 +156,23 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.375rem;
   margin-top: 3rem;
-  font-size: 0.775rem;
+  font-size: 0.675rem;
   padding: 1rem;
+}
+.about {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  max-width: 930px;
+  justify-content: center;
 }
 
 .about a {
   color: #8e8e8e;
-  margin-right: 1rem;
+  margin-right: 0.575rem;
+  margin-bottom: 0.575rem;
 }
 
 .dados a {
@@ -184,7 +195,6 @@ footer {
   }
   footer {
     margin-top: 3rem;
-    text-align: center;
   }
 }
 
